# Card_game

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/architecture/: architecture_description.md  class_diagram.md  component_diagram.md  test_plan.md  usage_scenarios.md
include/CardGame/: AIplayer.hpp
src/: AIplayer.cpp  main.cpp
tests/: test_main.cpp
